# emotion-detector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  main.py  requirements.txt  run.sh
models/: __init__.py
models/emotion_detector/: emotion_detector.py  emotion_map.py
models/face_detector/: face_detector.py  face_info.py
src/: emotion_detector.cpp  emotion_detector.hpp  emotions.hpp  main.cpp
src/UltraFace/: UltraFace.cpp  UltraFace.hpp
src/include/: AutoTime.hpp  ImageProcess.hpp  Interpreter.hpp  Tensor.hpp
src/mnn/include/: Backend.hpp  ErrorCode.hpp  NonCopyable.hpp  revertMNNModel.hpp
tests/: test_emotion_detector.py
